--- a/package.json
+++ b/package.json
@@ -28,16 +28,17 @@
   "devDependencies": {
     "@types/node": "^18.14.1",
     "@types/pg": "^8.6.6",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-teleology": "^1.0.1",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.0.5",
+    "sqlite3": "^5.1.4",
     "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "pg": "^8.9.0"
   }
 }
