--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teleology/migraine",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Taking the headache out of db migrations",
   "main": "lib/index.js",
   "author": "Chris Sullivan <chrissullivan.dev@gmail.com>",
@@ -26,6 +26,7 @@
     "prepare": "tsc"
   },
   "devDependencies": {
+    "@types/mysql": "^2.15.21",
     "@types/node": "^18.14.1",
     "@types/pg": "^8.6.6",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
@@ -38,7 +39,6 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.0.5",
-    "sqlite3": "^5.1.4",
     "typescript": "^4.9.5"
   }
 }
